--- a/estate/views/menu.xml
+++ b/estate/views/menu.xml
@@ -2,7 +2,7 @@
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Estate Property</field>
         <field name="res_model">estate.property</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,kanban</field>
     </record>
 
     <menuitem id="estate_menu_root" name="Estate Application">
