--- a/estate/views/estate_property.xml
+++ b/estate/views/estate_property.xml
@@ -58,6 +58,11 @@
 					                    <field name="buyer_id" />
 					                </group>
 				                </page>
+				                <page string="Information">
+				                	<group>
+					                	<field name="total_area" />
+					                </group>
+				                </page>
 				            </notebook>
 				        </group>
 				    </sheet>
