--- a/estate/views/menu.xml
+++ b/estate/views/menu.xml
@@ -5,7 +5,7 @@
         <field name="view_mode">tree,form,kanban</field>
     </record>
 
-    <menuitem id="estate_menu_root" name="Estate Application">
+    <menuitem id="estate_menu_root" name="Estate Application" sequence="0">
         <menuitem id="estate_master_data_menu" name="Master Data">
             <menuitem 
                 id="estate_property_menu_action" 
