--- a/estate/views/estate_property.xml
+++ b/estate/views/estate_property.xml
@@ -20,6 +20,7 @@
 					<field name="name" />
 					<field name="postcode" />
 					<field name="date_availability" />
+                	<field name="state" />					
 				</tree>
 		    </field>
 		</record>
@@ -66,6 +67,7 @@
 				                <page string="Information">
 				                	<group>
 					                	<field name="total_area" />
+					                	<field name="state" />
 					                </group>
 				                </page>
 				            </notebook>
