--- a/estate/views/estate_property.xml
+++ b/estate/views/estate_property.xml
@@ -32,6 +32,9 @@
 					<header>
 				        <button name="action_sold" type="object" string="Sold" invisible="state=='canceled' or state=='sold' or state=='offer_accepted'"/>
 				        <button name="action_cancel" type="object" string="Cancel" invisible="state=='canceled' or state=='sold' or state=='offer_accepted'" />
+				        <button name="action_send_email" type="object" string="Send 	Email"
+				        />
+
 				        <field name="state" widget="statusbar" statusbar_visible="new,offer_received,offer_accepted,sold"/>
 				    </header>
 				    <sheet>
