Add new model, create many2one relation

--- a/estate/views/estate_property.xml
+++ b/estate/views/estate_property.xml
@@ -17,6 +17,7 @@
 		    <field name="model">estate.property</field>
 		    <field name="arch" type="xml">
 				<tree string="Estate Property List">
+					<field name="property_type_id" />
 					<field name="name" />
 					<field name="postcode" />
 					<field name="date_availability" />
@@ -40,6 +41,7 @@
 				    <sheet>
 				        <group>
 				            <group>
+        						<field name="property_type_id" options="{'no_create': True, 'no_edit': True}"/>
 				                <field name="name"/>
 				                <field name="postcode" required="True"/>
 				                <field name="date_availability"/>
@@ -79,5 +81,10 @@
 				</form>
 		    </field>
 		</record>
+	    <record id="estate_property_action" model="ir.actions.act_window">
+	        <field name="name">Estate Property</field>
+	        <field name="res_model">estate.property</field>
+	        <field name="view_mode">tree,form,kanban</field>
+	    </record>		
 	</data>
 </odoo>
