--- a/estate/views/estate_property.xml
+++ b/estate/views/estate_property.xml
@@ -75,6 +75,9 @@
 					                	<field name="state" />
 					                </group>
 				                </page>
+				                <page string="Offers">
+								    <field name="offer_ids" readonly="state=='offer_accepted' or state=='sold' or state=='canceled'"/>
+								</page>
 				            </notebook>
 				        </group>
 				    </sheet>
