Add tag model and add many2many relation

--- a/estate/views/menu.xml
+++ b/estate/views/menu.xml
@@ -13,6 +13,10 @@
                 id="estate_property_offer_menu_action" 
                 action="estate_property_offer_action"
             />
+            <menuitem 
+                id="estate_property_tag_menu_action" 
+                action="estate_property_tag_action"
+            />
         </menuitem>
     </menuitem>
 </odoo>
