--- a/estate/views/estate_property.xml
+++ b/estate/views/estate_property.xml
@@ -26,7 +26,7 @@
 		    </field>
 		</record>
 		<record id="estate_property_view_form" model="ir.ui.view">
-		    <field name="name">Estate Property List</field>
+		    <field name="name">Estate Property Form</field>
 		    <field name="model">estate.property</field>
 		    <field name="arch" type="xml">
 				<form string="Test">
@@ -41,15 +41,16 @@
 				    <sheet>
 				        <group>
 				            <group>
+				            	<field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
         						<field name="property_type_id" options="{'no_create': True, 'no_edit': True}"/>
 				                <field name="name"/>
 				                <field name="postcode" required="True"/>
 				                <field name="date_availability"/>
 				                <field name="expected_price"/>
-				                <field name="facades"/>
-				                <field name="garage"/>				                
 				            </group>
-				            <group>
+				            <group>				            	
+				                <field name="facades"/>
+				                <field name="garage"/>
 				                <field name="garden"/>
 				                <field name="garden_area"/>
 				                <field name="selling_price"/>
