Customizing existing views

--- a/estate/views/estate_property_tag.xml
+++ b/estate/views/estate_property_tag.xml
@@ -1,9 +1,19 @@
 <odoo>
 	<data>
+		<record id="estate_property_tag_view_tree" model="ir.ui.view">
+		    <field name="name">Estate Property Tag List</field>
+		    <field name="model">estate.property.tag</field>
+		    <field name="arch" type="xml">
+				<tree string="Estate Property Tag List">
+					<field name="name" />
+					<field name="color" />
+				</tree>
+		    </field>
+		</record>
 	    <record id="estate_property_tag_action" model="ir.actions.act_window">
 	        <field name="name">Estate Property Tag</field>
 	        <field name="res_model">estate.property.tag</field>
-	        <field name="view_mode">tree,form,kanban</field>
+	        <field name="view_mode">tree,form</field>
 	    </record>		
 	</data>
 </odoo>
