--- a/learn_customization/views/views.xml
+++ b/learn_customization/views/views.xml
@@ -1,60 +1,26 @@
 <odoo>
   <data>
-    <!-- explicit list view definition -->
-<!--
-    <record model="ir.ui.view" id="learn_customization.list">
-      <field name="name">learn_customization list</field>
-      <field name="model">learn_customization.learn_customization</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
+    <record id="sale_order_form_inherit" model="ir.ui.view">
+        <field name="name">sale.order.form.inherit.client_document</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_id']" position="after">
+              <field name="client_document_number"/>
+            </xpath>
+        </field>
     </record>
--->
 
-    <!-- actions opening views on models -->
-<!--
-    <record model="ir.actions.act_window" id="learn_customization.action_window">
-      <field name="name">learn_customization window</field>
-      <field name="res_model">learn_customization.learn_customization</field>
-      <field name="view_mode">tree,form</field>
+    <record id="estate_property_tag_list_inherit" model="ir.ui.view">
+        <field name="name">estate.property.tag.list.inherit</field>
+        <field name="model">estate.property.tag</field>
+        <field name="inherit_id" ref="estate.estate_property_tag_view_tree"/>
+        <field name="arch" type="xml">
+            <field name="color" position="before">
+                <field name="priority" />
+            </field>
+        </field>
     </record>
--->
-
-    <!-- server action to the one above -->
-<!--
-    <record model="ir.actions.server" id="learn_customization.action_server">
-      <field name="name">learn_customization server</field>
-      <field name="model_id" ref="model_learn_customization_learn_customization"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": model._name,
-        }
-      </field>
-    </record>
--->
-
-    <!-- Top menu item -->
-<!--
-    <menuitem name="learn_customization" id="learn_customization.menu_root"/>
--->
-    <!-- menu categories -->
-<!--
-    <menuitem name="Menu 1" id="learn_customization.menu_1" parent="learn_customization.menu_root"/>
-    <menuitem name="Menu 2" id="learn_customization.menu_2" parent="learn_customization.menu_root"/>
--->
-    <!-- actions -->
-<!--
-    <menuitem name="List" id="learn_customization.menu_1_list" parent="learn_customization.menu_1"
-              action="learn_customization.action_window"/>
-    <menuitem name="Server to list" id="learn_customization" parent="learn_customization.menu_2"
-              action="learn_customization.action_server"/>
--->
+    
   </data>
 </odoo>
